return empty object to chat_before

--- a/chat_after/public/index.html
+++ b/chat_after/public/index.html
@@ -35,6 +35,7 @@
     <script src="/socket.io/socket.io.js"></script>
 
     <!-- Bower Components -->
+    <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
     <script src="bower_components/ng-lodash/build/ng-lodash.min.js"></script>
