add socket.join functionality

--- a/chat_after/public/main/main.html
+++ b/chat_after/public/main/main.html
@@ -63,3 +63,19 @@
     </div>
   </div>
 </div>
+
+<div class="row">
+  <div class="col-md-2">
+    <button type="button"
+                 class="btn btn-default"
+                 ng-click="joinPrivate()">Join Private</button>
+  </div>
+</div>
+ <br>
+ <div class="row">
+    <div class="col-md-2">
+      <button type="button"
+                   class="btn btn-default"
+                   ng-click="groupPm()">Send Group PM</button>
+    </div>
+  </div>
